{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 649,
  "lineage": "35af2ad3-5776-5bc9-49d1-eee5712d5689",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0702ef5209a3a6058",
            "domain": "vpc",
            "id": "eipalloc-0702ef5209a3a6058",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-54-251-126-91.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.251.126.91",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07315f74f3fa6a5a3",
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:instance/i-0aa5698721a9e4e52",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa5698721a9e4e52",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "spring-petclinic",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a758f3ad1c4b7d20",
            "private_dns": "ip-10-10-1-98.ap-southeast-1.compute.internal",
            "private_ip": "10.10.1.98",
            "public_dns": "ec2-18-141-234-96.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.234.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0fd399e72467a71bb",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011b700ad8fbcea6e",
            "tags": {
              "Name": "tf-instance"
            },
            "tags_all": {
              "Name": "tf-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c37f1795f51b7c93"
            ]
          },
          "dependencies": [
            "aws_security_group.petclinic",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:internet-gateway/igw-054670473e8eebb7b",
            "id": "igw-054670473e8eebb7b",
            "owner_id": "085516495823",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-igw"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-igw"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0702ef5209a3a6058",
            "connectivity_type": "public",
            "id": "nat-00f046d826b74ac05",
            "network_interface_id": "eni-0e4ddd08e1adc46bd",
            "private_ip": "10.10.1.230",
            "public_ip": "54.251.126.91",
            "subnet_id": "subnet-011b700ad8fbcea6e",
            "tags": {
              "Environment": "PetClinic",
              "Name": "nat"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dd351d64142f1bcf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00f046d826b74ac05",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd351d64142f1bcf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.database",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "elastic_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d0f450ed8070dc721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00f046d826b74ac05",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d0f450ed8070dc72",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.elastic",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-002fadc8f8e6e76d91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00f046d826b74ac05",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002fadc8f8e6e76d9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-054670473e8eebb7b",
            "id": "r-rtb-0f72d7663f39f65401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f72d7663f39f6540",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "redshift_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09e376ffa8a9363a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00f046d826b74ac05",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e376ffa8a9363a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.redshift",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:route-table/rtb-0dd351d64142f1bcf",
            "id": "rtb-0dd351d64142f1bcf",
            "owner_id": "085516495823",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-database-route-table"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-database-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elastic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:route-table/rtb-0d0f450ed8070dc72",
            "id": "rtb-0d0f450ed8070dc72",
            "owner_id": "085516495823",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-elastic-route-table"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-elastic-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:route-table/rtb-002fadc8f8e6e76d9",
            "id": "rtb-002fadc8f8e6e76d9",
            "owner_id": "085516495823",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-private-route-table"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:route-table/rtb-0f72d7663f39f6540",
            "id": "rtb-0f72d7663f39f6540",
            "owner_id": "085516495823",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-public-route-table"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:route-table/rtb-09e376ffa8a9363a9",
            "id": "rtb-09e376ffa8a9363a9",
            "owner_id": "085516495823",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-redshift-route-table"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-redshift-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0023f8395e453c07e",
            "route_table_id": "rtb-0dd351d64142f1bcf",
            "subnet_id": "subnet-0ebe518df3610d2d4"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0625d03019c4bb9d7",
            "route_table_id": "rtb-0dd351d64142f1bcf",
            "subnet_id": "subnet-078bf4f8e10a81fa2"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abe448eb166a16fa",
            "route_table_id": "rtb-0dd351d64142f1bcf",
            "subnet_id": "subnet-06e03aa0ccb323af6"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elastic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0720f65a9751d84be",
            "route_table_id": "rtb-0d0f450ed8070dc72",
            "subnet_id": "subnet-03f9d3bb4d0368662"
          },
          "dependencies": [
            "aws_route_table.elastic",
            "aws_subnet.elastic_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc94134318cafb4e",
            "route_table_id": "rtb-0d0f450ed8070dc72",
            "subnet_id": "subnet-0e616c616eb72361c"
          },
          "dependencies": [
            "aws_route_table.elastic",
            "aws_subnet.elastic_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002a1dac73df71772",
            "route_table_id": "rtb-0d0f450ed8070dc72",
            "subnet_id": "subnet-0141a8015f7a66420"
          },
          "dependencies": [
            "aws_route_table.elastic",
            "aws_subnet.elastic_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00dc14975e9248b64",
            "route_table_id": "rtb-002fadc8f8e6e76d9",
            "subnet_id": "subnet-085a59c44d255f258"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ff84a7e50c0b102",
            "route_table_id": "rtb-002fadc8f8e6e76d9",
            "subnet_id": "subnet-0f100d0e173c7d58f"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ca4a6843fba2c61",
            "route_table_id": "rtb-002fadc8f8e6e76d9",
            "subnet_id": "subnet-0b476794d05a7321d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb145346193d74fd",
            "route_table_id": "rtb-0f72d7663f39f6540",
            "subnet_id": "subnet-011b700ad8fbcea6e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cfb405b8ece7350",
            "route_table_id": "rtb-0f72d7663f39f6540",
            "subnet_id": "subnet-054a538d3b64807f3"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a9ac8079789fc60",
            "route_table_id": "rtb-0f72d7663f39f6540",
            "subnet_id": "subnet-07a8bd17fea50f9f7"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5ef9a361188f2b8",
            "route_table_id": "rtb-09e376ffa8a9363a9",
            "subnet_id": "subnet-0812a3e342988ff15"
          },
          "dependencies": [
            "aws_route_table.redshift",
            "aws_subnet.redshift_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c300f93046f33cc",
            "route_table_id": "rtb-09e376ffa8a9363a9",
            "subnet_id": "subnet-09e04ede6e40b8b28"
          },
          "dependencies": [
            "aws_route_table.redshift",
            "aws_subnet.redshift_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d6f725d56345838",
            "route_table_id": "rtb-09e376ffa8a9363a9",
            "subnet_id": "subnet-0971847f20a4a30c4"
          },
          "dependencies": [
            "aws_route_table.redshift",
            "aws_subnet.redshift_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "petclinic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:security-group/sg-0c37f1795f51b7c93",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c37f1795f51b7c93",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_petclinic",
            "name_prefix": "",
            "owner_id": "085516495823",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "PetClinic"
            },
            "tags_all": {
              "Environment": "PetClinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-0ebe518df3610d2d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebe518df3610d2d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1a-database-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1a-database-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-078bf4f8e10a81fa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078bf4f8e10a81fa2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1b-database-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1b-database-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-06e03aa0ccb323af6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.23.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e03aa0ccb323af6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1c-database-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1c-database-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elastic_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-03f9d3bb4d0368662",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.31.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f9d3bb4d0368662",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1a-elastic-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1a-elastic-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-0e616c616eb72361c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.32.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e616c616eb72361c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1b-elastic-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1b-elastic-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-0141a8015f7a66420",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.33.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0141a8015f7a66420",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1c-elastic-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1c-elastic-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-085a59c44d255f258",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085a59c44d255f258",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1a-private-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-0f100d0e173c7d58f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f100d0e173c7d58f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1b-private-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1b-private-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-0b476794d05a7321d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b476794d05a7321d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1c-private-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1c-private-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-011b700ad8fbcea6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011b700ad8fbcea6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1a-public-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1a-public-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-054a538d3b64807f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054a538d3b64807f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1b-public-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1b-public-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-07a8bd17fea50f9f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a8bd17fea50f9f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1c-public-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1c-public-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-0812a3e342988ff15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.41.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0812a3e342988ff15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1a-redshift-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1a-redshift-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-09e04ede6e40b8b28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.42.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e04ede6e40b8b28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1b-redshift-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1b-redshift-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:subnet/subnet-0971847f20a4a30c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.43.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0971847f20a4a30c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085516495823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1c-redshift-subnet"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-ap-southeast-1c-redshift-subnet"
            },
            "vpc_id": "vpc-03aa106a43925cf9e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:085516495823:vpc/vpc-03aa106a43925cf9e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06c90f166ea006850",
            "default_route_table_id": "rtb-0092b4c21a6f35cce",
            "default_security_group_id": "sg-0b4a7028140384516",
            "dhcp_options_id": "dopt-0f172071ea0448931",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03aa106a43925cf9e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0092b4c21a6f35cce",
            "owner_id": "085516495823",
            "tags": {
              "Environment": "PetClinic",
              "Name": "PetClinic-vpc"
            },
            "tags_all": {
              "Environment": "PetClinic",
              "Name": "PetClinic-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}